# r-utils

./: Cargo.toml  install.sh
.github/workflows/: build.yml
_multitool/src/: cmd_ptt.rs
_netstatus/src/: main.rs
r_aidump/: Cargo.toml
r_aidump/src/: main.rs
r_multitool/: Cargo.toml
r_multitool/src/: cmd_cycle.rs  cmd_hyprland.rs  cmd_volume.rs  main.rs  utils.rs
r_netstatus/: Cargo.toml
r_overlay/: Cargo.toml
r_overlay/src/: draw.rs  main.rs  network.rs  wayland.rs
r_window/: Cargo.toml
r_window/src/: main.rs
