[package]
name = "r_overlay"
version = "0.1.0"
edition = "2024"
[dependencies]
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
calloop-wayland-source = "0.4.1"
tiny-skia = "0.11.4"
tokio = { version = "1.48.0", features = ["full"] }
crossbeam = "0.8.4"
calloop = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"